k8s/service.yaml
# This file defines an Service resource for the products service.
apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
